// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssociableHotspot > render > render circle shapes 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <circle
        class="shape-outer-border"
        cx="94"
        cy="302"
        r="36"
      />
      <circle
        class="shape-inner-border"
        cx="94"
        cy="302"
        r="30"
      />
      <circle
        class="shape-dashed-outline"
        cx="94"
        cy="302"
        r="36"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > render ellipse shapes 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <ellipse
        class="shape-outer-border"
        cx="373"
        cy="22"
        rx="36"
        ry="36"
      />
      <ellipse
        class="shape-inner-border"
        cx="373"
        cy="22"
        rx="30"
        ry="30"
      />
      <ellipse
        class="shape-dashed-outline"
        cx="373"
        cy="22"
        rx="36"
        ry="36"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > render poly shapes 1`] = `
<svg
  version="1.1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape poly with-label"
      role="button"
      tabindex="-1"
    >
      <polygon
        class="shape-shadow"
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
      <polygon
        class="shape-inner-border"
        clip-path="url(#SvgjsClipPath1000)"
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
      <polygon
        class="shape-outer-border"
        clip-path="url(#SvgjsClipPath1000)"
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
      <polygon
        class="shape-dashed-outline"
        clip-path="url(#SvgjsClipPath1000)"
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
      <polygon
        class="shape-outline-cover"
        clip-path="url(#SvgjsClipPath1000)"
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
    </g>
    
    
  </g>
  
  
  <defs>
    <clippath
      id="SvgjsClipPath1000"
    >
      <polygon
        points="49,402 49,408 41,408 39,421 48,424 48,429 60,429 59,402"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`AssociableHotspot > render > render rect shapes 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="110"
        width="135"
        x="181"
        y="91"
      />
      <rect
        class="shape-inner-border"
        height="98"
        width="123"
        x="187"
        y="97"
      />
      <rect
        class="shape-dashed-outline"
        height="110"
        width="135"
        x="181"
        y="91"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > renders disabled gap 1`] = `
<body>
  <div>
    <g
      class="associable-hotspot"
      data-droparea-area=""
      data-droparea-key="item1"
      key="item1"
      style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
    >
      <g
        aria-disabled="true"
        aria-label="put choice here"
        class="shape"
        role="button"
        tabindex="-1"
      >
        <rect
          class="shape-outer-border"
          height="0"
          width="72"
          x="-0.5"
          y="0"
        />
        <rect
          class="shape-inner-border"
          height="0"
          width="60"
          x="5.5"
          y="0"
        />
        <rect
          class="shape-dashed-outline"
          height="0"
          width="72"
          x="-0.5"
          y="0"
        />
      </g>
      
      
    </g>
    
    
  </div>
</body>
`;

exports[`AssociableHotspot > render > renders gap in active state 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot targetable"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
      <rect
        class="shape-inner-border"
        height="0"
        width="60"
        x="5.5"
        y="0"
      />
      <rect
        class="shape-dashed-outline"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > renders gap in target state 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot targeted"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
      <rect
        class="shape-inner-border"
        height="0"
        width="60"
        x="5.5"
        y="0"
      />
      <rect
        class="shape-dashed-outline"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > renders hotspot with minimal props 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    data-droparea-area=""
    data-droparea-key="item1"
    key="item1"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    <g
      aria-disabled="false"
      aria-label="put choice here"
      class="shape"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
      <rect
        class="shape-inner-border"
        height="0"
        width="60"
        x="5.5"
        y="0"
      />
      <rect
        class="shape-dashed-outline"
        height="0"
        width="72"
        x="-0.5"
        y="0"
      />
    </g>
    
    
  </g>
  
  
</svg>
`;

exports[`AssociableHotspot > render > renders hotspot without props 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="associable-hotspot"
    style="--draw-focus-dasharray: 4px; --dash-width: 12px;"
  >
    
    
  </g>
  
  
</svg>
`;
